--- a/src/styles/Community.css
+++ b/src/styles/Community.css
@@ -1,6 +1,6 @@
 .community-background {
   background: #4a62ff;
-  height: 135vh;
+  height: 140vh;
 }
 .dark-community-background {
   background: #1d1f28 !important;
