--- a/src/styles/Partners.css
+++ b/src/styles/Partners.css
@@ -22,7 +22,7 @@
   border-bottom: 4px solid #ffffff;
   position: relative;
   top: -150px !important;
-  margin-left: 240px !important;
+  margin-left: 300px !important;
 }
 .dark-line {
   width: 52vw;
